Add support for change default wireless settings
Example config:
CONFIG_PACKAGE_MAC80211_ENABLE=y
CONFIG_PACKAGE_MAC80211_COUNTRY="US"
CONFIG_PACKAGE_MAC80211_SSID="OpenWrt-WiFi"
CONFIG_PACKAGE_MAC80211_ENCRYPTION="psk2"
CONFIG_PACKAGE_MAC80211_PASSWORD="12345678"

--- a/package/base-files/Makefile
+++ b/package/base-files/Makefile
@@ -169,6 +169,15 @@ define Package/base-files/install
 		$(1)/etc/preinit \
 		$(1)/etc/profile
 
+	$(if $(CONFIG_PACKAGE_MAC80211_ENABLE), \
+		$(SED) "s#%ENABLE%#y#g" \
+			-e "s#%SSID%#$(CONFIG_PACKAGE_MAC80211_SSID)#g" \
+			-e "s#%ENCRYPTION%#$(CONFIG_PACKAGE_MAC80211_ENCRYPTION)#g" \
+			-e "s#%KEY%#$(CONFIG_PACKAGE_MAC80211_PASSWORD)#g" \
+			-e "s#%COUNTRY%#$(CONFIG_PACKAGE_MAC80211_COUNTRY)#g" \
+			$(1)/etc/uci-defaults/77_wireless \
+	)
+
 	mkdir -p \
 		$(1)/CONTROL \
 		$(1)/dev \
